--- a/src/main/resources/com/agendastudy/styles/relatorio.css
+++ b/src/main/resources/com/agendastudy/styles/relatorio.css
@@ -1,6 +1,7 @@
 /* Paleta base */
-/*
-* @author LUARA GABRIELLI 
+/**
+* CSS DO RELATÓRIO
+ * @author LUARA GABRIELLI 
  * @version 1.1
  * @since 2025-11-14
  */
