--- a/src/main/resources/com/agendastudy/view/CadastroTipo.fxml
+++ b/src/main/resources/com/agendastudy/view/CadastroTipo.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="350.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.agendastudy.LoginController">
+<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="350.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.agendastudy.controller.LoginController">
     <children>
         <Button onAction="#handleVoltar" style="-fx-background-color: transparent;" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
             <graphic>
