--- a/src/main/resources/com/agendastudy/view/Login.fxml
+++ b/src/main/resources/com/agendastudy/view/Login.fxml
@@ -6,9 +6,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="350.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.agendastudy.LoginController">
+<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="350.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.agendastudy.controller.LoginController">
     <children>
 
         <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
@@ -32,15 +34,20 @@
                         <Font name="System Bold" size="28.0" />
                     </font>
                     <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets bottom="10.0" />
                     </VBox.margin>
                 </Label>
 
-                <Label text="Já tem conta? Faça login" textFill="#555555" />
+                <TextField fx:id="emailField" promptText="Email" prefHeight="40.0" style="-fx-background-radius: 8;" />
+                <PasswordField fx:id="senhaField" promptText="Senha" prefHeight="40.0" style="-fx-background-radius: 8;" />
+
                 <Button onAction="#handleLogin" prefHeight="45.0" prefWidth="250.0" style="-fx-background-color: #3498DB; -fx-background-radius: 8;" text="Login" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="16.0" />
                     </font>
+                    <VBox.margin>
+                        <Insets top="10.0" />
+                    </VBox.margin>
                 </Button>
 
                 <Label text="Novo usuário? Crie sua conta" textFill="#555555">
